--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 # Default profile for H2
-spring.profiles.active=default
+#spring.profiles.active=default
 spring.datasource.url=jdbc:h2:mem:testdb
 
 server.error.include-stacktrace=never
+
+spring.jpa.show-sql=true
