--- a/src/main/resources/application-postgres.properties
+++ b/src/main/resources/application-postgres.properties
@@ -3,6 +3,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/database
 spring.datasource.username=postgres
 spring.datasource.password=21442139
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 server.error.include-stacktrace=never
 
