traditional login/password and social authentication methods(github, google)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,16 @@
 #spring.profiles.active=default
 spring.datasource.url=jdbc:h2:mem:testdb
 
+#github
+spring.security.oauth2.client.registration.github.client-id = Ov23lijeD1YhUi11jUOT
+spring.security.oauth2.client.registration.github.client-secret=48eb4d934c62b18976c2c23132ad69993d99f30c
+
+#google
+spring.security.oauth2.client.registration.google.client-id = 160204501452-66aaj0emuglqhdq5vq3hiq5l214rhq7a.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret= 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
+
+
 server.error.include-stacktrace=never
+
+logging.level.org.springframework.boot.autoconfigure.condition=ERROR
+
