user regiatration added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,26 @@
 # Default profile for H2
 #spring.profiles.active=default
-spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.url=jdbc:h2:mem:testdb
+#server.error.include-stacktrace=never
+#logging.level.org.springframework.boot.autoconfigure.condition=ERROR
 
+
+spring.mail.host=smtp.example.com
+spring.mail.port=587
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/database
+spring.datasource.username=postgres
+spring.datasource.password=21442139
+
+spring.jpa.hibernate.ddl-auto=create
 server.error.include-stacktrace=never
+#github
+spring.security.oauth2.client.registration.github.client-id = Ov23lijeD1YhUi11jUOT
+spring.security.oauth2.client.registration.github.client-secret=48eb4d934c62b18976c2c23132ad69993d99f30c
 
-logging.level.org.springframework.boot.autoconfigure.condition=ERROR
-
+#google
+spring.security.oauth2.client.registration.google.client-id = 160204501452-66aaj0emuglqhdq5vq3hiq5l214rhq7a.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret= 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
