--- a/src/main/resources/application-postgres.properties
+++ b/src/main/resources/application-postgres.properties
@@ -3,10 +3,17 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/database
 spring.datasource.username=postgres
 spring.datasource.password=21442139
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 server.error.include-stacktrace=never
 
-
 logging.level.org.springframework.boot.autoconfigure.condition=ERROR
+
+#github
+spring.security.oauth2.client.registration.github.client-id = Ov23lijeD1YhUi11jUOT
+spring.security.oauth2.client.registration.github.client-secret=48eb4d934c62b18976c2c23132ad69993d99f30c
+
+#google
+spring.security.oauth2.client.registration.google.client-id = 160204501452-66aaj0emuglqhdq5vq3hiq5l214rhq7a.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret= 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
 
 
